[package]
name = "imagemorph"
version = "0.1.0"
authors = ["Alex Davidoff <ad35@pdx.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
conv = "0.3.3"
gl = "0.14.0"
glium = "*"
image = "0.22.2"
imageproc = "0.19.2"
num-traits = "0.2.11"
winit = "0.19"
